Fix security config: Allow public access to /auth/** and improve CORS headers